auto-test/tests/chapter_18/invalid_types/extra_credit/union_tag_resolution/union_wrong_member.c
union u {
    int a;
};

int main(void) {
    union u foo = {1};

    
    union u {
        int b;
    };

    return foo.b; 
}